[Hotword, WebUI] Fix formatting for reset browser settings. The formatting became misaligned when the same variable was used for the hotwording overlay. By giving the hotwording overlay its own id, the css for the hotwording overlay no longer affects the reset browser settings checkbox
BUG=361549

Review URL: https://codereview.chromium.org/243133002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@264825 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4890a1700e1e6c303a5fda27a69b97c90fb13a91

--- a/chrome/browser/resources/options/hotword_confirm_overlay.css
+++ b/chrome/browser/resources/options/hotword_confirm_overlay.css
@@ -7,6 +7,6 @@
   width: 500px;
 }
 
-#feedback-bar input {
+#audio-logging-bar input {
   bottom: 6px;
 }
